# VertexEnumeration3D

./: CMakeLists.txt  README.md  package.xml
config/: polyve_params.yaml  rviz_config.rviz
include/geo_utils/: geo_utils.hpp
include/geoutils/: geoutils.hpp  quickhull.hpp
include/polyve/: config.hpp  polyve.h
launch/: polyve.launch
src/: polyve.cpp  polyve_node.cpp
